fix: align not applied on loading bar label

--- a/sass/view3d-loading.sass
+++ b/sass/view3d-loading.sass
@@ -48,6 +48,9 @@
   width: 0
   height: 100%
 
+.view3d-lb-label
+  text-align: center
+
 @keyframes view3d-lb-spin
   0%
     transform: rotate(0deg)
